--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "eslint-config",
+  "name": "@scastro37/eslint-config",
   "version": "1.0.0",
   "description": "ESLint Config",
   "main": "index.js",
