--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@scastro37/eslint-config",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "ESLint Config",
   "main": "index.js",
   "repository": {
@@ -12,6 +12,25 @@
   ],
   "author": "Sebastian Castro",
   "license": "MIT",
+  "peerDependencies": {
+    "eslint": "^7.23.0",
+    "eslint-config-prettier": "^8.1.0",
+    "eslint-config-standard": "^16.0.2",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-react": "^7.23.1",
+    "eslint-plugin-promise": "^4.3.1",
+    "lint-staged": "10.5.4",
+    "simple-git-hooks": "^2.2.0"
+  },
+  "lint-staged": {
+    "*.js": "eslint --cache --fix",
+    "*.{js,css,md}": "prettier --write"
+  },
+  "simple-git-hooks": {
+    "pre-commit": "npx lint-staged"
+  },
   "bugs": {
     "url": "https://github.com/scastro37/eslint-config/issues"
   },
