--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@scastro37/eslint-config",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "ESLint Config",
   "main": "index.js",
   "repository": {
@@ -13,6 +13,8 @@
   "author": "Sebastian Castro",
   "license": "MIT",
   "peerDependencies": {
+    "@babel/eslint-parser": "^7.13.14",
+    "@babel/plugin-transform-runtime": "^7.13.10",
     "eslint": "^7.23.0",
     "eslint-config-prettier": "^8.1.0",
     "eslint-config-standard": "^16.0.2",
