--- a/package.json
+++ b/package.json
@@ -1,33 +1,33 @@
 {
-  "name": "@scastro37/eslint-config",
-  "version": "1.0.11",
-  "description": "ESLint Config",
-  "main": "index.js",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/scastro37/eslint-config.git"
-  },
-  "keywords": [
-    "ESLint"
-  ],
-  "author": "Sebastian Castro",
-  "license": "MIT",
-  "peerDependencies": {
-    "@babel/eslint-parser": ">=7",
-    "@babel/plugin-transform-runtime": ">=7",
-    "eslint": ">=7",
-    "eslint-config-prettier": ">=8",
-    "eslint-config-standard": ">=16",
-    "eslint-plugin-import": ">=2",
-    "eslint-plugin-jsx-a11y": ">=6",
-    "eslint-plugin-node": ">=11",
-    "eslint-plugin-promise": ">=4",
-    "eslint-plugin-react": ">=7",
-    "lint-staged": ">=10",
-    "simple-git-hooks": ">=2"
-  },
-  "bugs": {
-    "url": "https://github.com/scastro37/eslint-config/issues"
-  },
-  "homepage": "https://github.com/scastro37/eslint-config#readme"
+    "name": "eslint-config-test-jr",
+    "version": "1.0.8",
+    "description": "ESLint Config",
+    "main": "index.js",
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/scastro37/eslint-config.git"
+    },
+    "keywords": [
+        "ESLint"
+    ],
+    "author": "Sebastian Castro",
+    "license": "MIT",
+    "peerDependencies": {
+        "@babel/eslint-parser": ">=7",
+        "@babel/plugin-transform-runtime": ">=7",
+        "eslint": ">=7",
+        "eslint-config-prettier": ">=8",
+        "eslint-config-standard": ">=16",
+        "eslint-plugin-import": ">=2",
+        "eslint-plugin-jsx-a11y": ">=6",
+        "eslint-plugin-node": ">=11",
+        "eslint-plugin-promise": ">=4",
+        "eslint-plugin-react": ">=7",
+        "lint-staged": ">=10",
+        "simple-git-hooks": ">=2"
+    },
+    "bugs": {
+        "url": "https://github.com/scastro37/eslint-config/issues"
+    },
+    "homepage": "https://github.com/scastro37/eslint-config#readme"
 }
