--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "eslint-config-test-jr",
-    "version": "1.0.8",
+    "version": "1.0.12",
     "description": "ESLint Config",
     "main": "index.js",
     "repository": {
@@ -16,6 +16,11 @@
         "@babel/eslint-parser": ">=7",
         "@babel/plugin-transform-runtime": ">=7",
         "eslint": ">=7",
+        "@typescript-eslint/eslint-plugin": ">=4",
+        "@typescript-eslint/parser": ">=4",
+        "eslint-config-test-jr": ">=1",
+        "eslint-plugin-prettier": ">=3",
+        "prettier": ">=2",
         "eslint-config-prettier": ">=8",
         "eslint-config-standard": ">=16",
         "eslint-plugin-import": ">=2",
