Add dependencies babel

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@scastro37/eslint-config",
-    "version": "1.0.13",
+    "version": "1.0.14",
     "description": "ESLint Config",
     "main": "index.js",
     "repository": {
@@ -13,22 +13,27 @@
     "author": "Sebastian Castro",
     "license": "MIT",
     "peerDependencies": {
+        "@babel/cli": ">=7",
+        "@babel/core": ">=7",
         "@babel/eslint-parser": ">=7",
+        "@babel/node": ">=7",
         "@babel/plugin-transform-runtime": ">=7",
-        "eslint": ">=7",
+        "@babel/preset-env": ">=7",
+        "@babel/register": ">=7",
         "@typescript-eslint/eslint-plugin": ">=4",
         "@typescript-eslint/parser": ">=4",
-        "eslint-config-test-jr": ">=1",
-        "eslint-plugin-prettier": ">=3",
-        "prettier": ">=2",
+        "eslint": ">=7",
         "eslint-config-prettier": ">=8",
         "eslint-config-standard": ">=16",
+        "eslint-config-test-jr": ">=1",
         "eslint-plugin-import": ">=2",
         "eslint-plugin-jsx-a11y": ">=6",
         "eslint-plugin-node": ">=11",
+        "eslint-plugin-prettier": ">=3",
         "eslint-plugin-promise": ">=4",
         "eslint-plugin-react": ">=7",
         "lint-staged": ">=10",
+        "prettier": ">=2",
         "simple-git-hooks": ">=2"
     },
     "bugs": {
