--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@scastro37/eslint-config",
-    "version": "1.0.17",
+    "version": "1.0.18",
     "description": "ESLint Config",
     "main": "index.js",
     "repository": {
@@ -17,7 +17,6 @@
         "@babel/plugin-transform-runtime": ">=7",
         "@typescript-eslint/eslint-plugin": ">=4",
         "@typescript-eslint/parser": ">=4",
-        "eslint": ">=7",
         "eslint-config-prettier": ">=8",
         "eslint-config-standard": ">=16",
         "eslint-config-test-jr": ">=1",
@@ -27,9 +26,7 @@
         "eslint-plugin-prettier": ">=3",
         "eslint-plugin-promise": ">=4",
         "eslint-plugin-react": ">=7",
-        "lint-staged": ">=10",
-        "prettier": ">=2",
-        "simple-git-hooks": ">=2"
+        "lint-staged": ">=10"
     },
     "bugs": {
         "url": "https://github.com/scastro37/eslint-config/issues"
