--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@scastro37/eslint-config",
-    "version": "1.0.19",
+    "version": "1.0.20",
     "description": "ESLint Config",
     "main": "index.js",
     "repository": {
@@ -26,7 +26,7 @@
         "eslint-plugin-prettier": ">=3",
         "eslint-plugin-promise": ">=4",
         "eslint-plugin-react": ">=7",
-        "lint-staged": ">=10"
+        "react": ">=17"
     },
     "bugs": {
         "url": "https://github.com/scastro37/eslint-config/issues"
