--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@scastro37/eslint-config",
-    "version": "1.0.22",
+    "version": "1.0.23",
     "description": "ESLint Config",
     "main": "index.js",
     "repository": {
@@ -17,6 +17,7 @@
         "@babel/plugin-transform-runtime": ">=7",
         "@typescript-eslint/eslint-plugin": ">=4",
         "@typescript-eslint/parser": ">=4",
+        "babel-eslint": ">=10",
         "eslint-config-prettier": ">=8",
         "eslint-config-standard": ">=16",
         "eslint-plugin-import": ">=2",
